force-app/main/default/objects/Thread__c/Thread__c.object-meta.xml
<CustomObject>
    <description>Threads temporaria de um agent__c na openai</description>
    <label>Conversa de um agente</label>
    <nameField>
        <label>Nome de Conversa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Threads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>