force-app/main/default/objects/Thread__c/fields/resumo__c.field-meta.xml
<CustomField>
    <fullName>resumo__c</fullName>
    <description>Resumo preenchido automaticamente</description>
    <label>Resumo da conversa</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>