force-app/main/default/objects/Thread__c/fields/thread_id__c.field-meta.xml
<CustomField>
    <fullName>thread_id__c</fullName>
    <description>Id referente a thread criada na openai</description>
    <label>id da thread</label>
    <length>100</length>
    <type>Text</type>
</CustomField>