force-app/main/default/objects/Thread__c/fields/ultima_intera_o__c.field-meta.xml
<CustomField>
    <fullName>ultima_intera_o__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ultima interação</label>
    <type>DateTime</type>
</CustomField>